css is dangerous for life

--- a/404.html
+++ b/404.html
@@ -33,7 +33,7 @@ body {
 </style>
 </head>
 <!-- BODY -->
-<body id=" ଘ(੭*ˊᵕˋ)੭* ̀ˋ hello ɪɴᴛᴇʀɴᴇᴛ ">
+<body id="ଘ(੭*ˊᵕˋ)੭*ˋhello ɪɴᴛᴇʀɴᴇᴛ ">
 <header><div class="header-content">
 <!-- LOGO -->
 <span id="jumi-logo"><img src="assets/img/ico/jumi.ico"></span>
