--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 <style>
 :root { /* Farben */
-	--the-darkness: #000;
 	--shadow-grey: #131313;
 	--pipi-white: #ebebd3;
 	--matrix-green: #8dd88e;
@@ -29,31 +28,31 @@
         rgba(0, 0, 0, 0.1) 0px 2px 4px,
         rgba(0, 0, 0, 0.4) 0px -2px 0px inset;
 }
-html {background-color: var(--alien-shadow);}
+html {background-color: var(--shadow-grey);}
 body {
     position: relative;/* Footer-Einfluss */
     height: 100%;/* Footer-Einfluss */
     min-width:100%;
-    margin: 0;padding: 0;
+    margin:0;padding:0;
     text-rendering: optimizeSpeed;
 }
 *,*::before,*::after {box-sizing: border-box;}
 </style>
 </head>
 <!-- BODY -->
-<body id=" ଘ(੭*ˊᵕˋ)੭* ̀ˋ hello ɪɴᴛᴇʀɴᴇᴛ ">
+<body id="ଘ(੭*ˊᵕˋ)੭*ˋhello_ɪɴᴛᴇʀɴᴇᴛ">
 <header><div class="header-content">
 <!-- LOGO -->
-<span id="jumi-logo"><img src="assets/img/ico/jumi.ico"></span>
+<span id="jumi-logo"><img src="assets/img/ico/jumi.ico" alt="Jumi Logo"></span>
 <a href="https://www.jumi.biz"><span id="jumi-biz">jumi.biz</span></a>
 <!-- BUTTON -->
-<nav class="navigation">
+</div><nav class="navigation">
 <button class="menu-button"
         aria-controls="menu-list"
         aria-expanded="false">
   <span class="hidden-menu">Menu</span>
   <div class="menu-icon" aria-hidden="true"></div>
-</button></div><div class="header-text"><span><!-- Textbanner --></span>
+</button><div class="header-text"><span><!-- Textbanner --></span>
 <!-- MENU -->
 <ul data-state="closed" class="menu-list">
 <li><a href="Content.htm"><i class="list-icon">
@@ -69,15 +68,13 @@ body {
 <div class="grid-container">
 <article id="area-1" class="content flow">
 <!-- HELLO WORLD -->
-<section><hgroup><h1>print("hello world")</h1><h3>WTF is <span class="jumi-font">jumi.biz</span> ?</h3></hgroup>
-
-<p>Hier findest du Zusammenfassungen zu <a href="https://www.jumi.biz/Content.htm">
+<hgroup><h1>print("hello world")</h1><p>WTF is <span class="jumi-font">jumi.biz</span> ?</p></hgroup>
+<section><p>Hier findest du Zusammenfassungen zu <a href="https://www.jumi.biz/Content.htm">
 Themen</a> über Linux Windows Cybersecurity Hacking Coding Shell Tools Network-Basics.</p></section>
 <!-- ABOUT -->
-<aside><p></aside>
 <aside>
+  <h4>Diese Website ist im Aufbau</h4>
   <ul style="font-size:small;">
-  <caption>Diese Website ist im Aufbau</caption>
   <li>[2019-06] Domain gemietet</li>
   <li>[2020/21] Konzeptentwicklung</li>
   <li>[2022-11] Ausarbeitung</li>
@@ -116,8 +113,8 @@ Themen</a> über Linux Windows Cybersecurity Hacking Coding Shell Tools Network-
       <figcaption>
         <h2>Human Interface</h2>
       </figcaption>
-      <button id="closeModal01"> &times; </button>
     </figure>
+    <button id="closeModal01"> &times; </button>
   </dialog>
   <!-- PICTURE -->
   <img id="modalTrigger02" src="assets/img/profile-img-2.png" alt="Picture shows shoe">
@@ -127,8 +124,8 @@ Themen</a> über Linux Windows Cybersecurity Hacking Coding Shell Tools Network-
       <figcaption>
         <h2>Local Area</h2>
       </figcaption>
-      <button id="closeModal02"> &times; </button>
     </figure>
+    <button id="closeModal02"> &times; </button>
   </dialog>
   <!-- PICTURE -->
   <img id="modalTrigger03" src="assets/img/profile-img-3.png" alt="Picture shows computer">
@@ -138,22 +135,22 @@ Themen</a> über Linux Windows Cybersecurity Hacking Coding Shell Tools Network-
       <figcaption>
         <h2>Central Processing</h2>
       </figcaption>
-      <button id="closeModal03"> &times; </button>
     </figure>
+    <button id="closeModal03"> &times; </button>
   </dialog>
 </div>
 <br>
 <!-- PERSON -->
     <p>Mir macht es Spass, mich mit IT zu beschäftigen und Texte für Lernzwecke zu minimalisieren. Die Quellen meiner Textinhalte sind öffentliche Personen mit großer Reichweite oder private Weiterbildungen.</p>
-    <q>Wer? Wer ist nur die Form als Konsequenz der Funktion des&nbsp;Was. Und&nbsp;was ich bin, das ist ein Mann mit Maske.</q><figcaption><cite>- V wie Vendetta</cite> (2005)</figcaption>
+    <q>Wer? Wer ist nur die Form als Konsequenz der Funktion des&nbsp;Was. Und&nbsp;was ich bin, das ist ein Mann mit Maske.</q><br><cite>- V wie Vendetta (2005)</cite>
 </article>
 <article id="area-3" class="content flow">
 <!-- STUFF -->
 <h4>Dark Mode Only</h4>
     <p>Ein dunkler Bildschirm spart bis zu 60% Energie und schont die&nbsp;Augen.
     Wenn&nbsp;du den hellen Modus immer noch bevorzugst dann&nbsp;GTFO!</p>
-    <q>Come with me. It is the only way.</q><figcaption>
-    <cite>- Star Wars: Episode V</cite> (1980)</figcaption>
+    <q>Come with me. It is the only way.</q><br>
+    <cite>- Star Wars: Episode V (1980)</cite>
 </article>
 <article id="area-4" class="content flow">
 <!-- STUFF -->
@@ -166,8 +163,8 @@ Themen</a> über Linux Windows Cybersecurity Hacking Coding Shell Tools Network-
     Das&nbsp;Beherrschen von Kung&nbsp;Fu erfordert&nbsp;Reaktionsfähigkeit,
     während&nbsp;bei der Verarbeitung von Informationen analytisches und logisches Denken entscheidend&nbsp;ist.
     In&nbsp;der IT, wie im Kung&nbsp;Fu, liegt die Meisterschaft in der Hingabe und dem Streben nach&nbsp;Exzellenz.</blockquote>
-    <q>Der Meister erscheint wenn der Schüler bereit ist.</q>
-    <figcaption><cite>- Karate Tiger</cite> (1986)</figcaption>
+    <q>Der Meister erscheint wenn der Schüler bereit ist.</q><br>
+    <cite>- Karate Tiger (1986)</cite>
 </article>
 <article id="area-5" class="content flow">
 <h2>Quiz-Raum 3327</h2>
@@ -175,8 +172,8 @@ Themen</a> über Linux Windows Cybersecurity Hacking Coding Shell Tools Network-
 <summary>I have keys but no doors. I&nbsp;have space but no room. You&nbsp;can enter but can’t leave.<br>What am I ?</summary>
 <br><span class="quiz-answers">A keyboard</span>
 </details>
-<q>Die Wissenschaft ist&nbsp;bestrebt, die&nbsp;Welt um uns herum zu&nbsp;verstehen. Die&nbsp;Technologie hingegen strebt danach, sie zu&nbsp;beherrschen.</q>
-<figcaption><cite>- Nikola Tesla</cite> (1856-1943)</figcaption>
+<q>Die Wissenschaft ist&nbsp;bestrebt, die&nbsp;Welt um uns herum zu&nbsp;verstehen. Die&nbsp;Technologie hingegen strebt danach, sie zu&nbsp;beherrschen.</q><br>
+<cite>- Nikola Tesla (1856-1943)</cite>
 </article></div></main>
 
 <!-- ### Debugger: Auto-Refresh Page (-option)
@@ -208,7 +205,7 @@ Themen</a> über Linux Windows Cybersecurity Hacking Coding Shell Tools Network-
 <a id="goto-top" href="#">
 <img src="assets/img/ico/go-top.ico" alt="Zum Seitenanfang"></a></div></div></footer>
 <!-- SCRIPTS -->
-<script src="assets/js/menu.js"></script>
-<script src="assets/js/modal.js"></script>
+<script defer src="assets/js/menu.js"></script>
+<script defer src="assets/js/modal.js"></script>
 
 </body></html>
