--- a/Links.htm
+++ b/Links.htm
@@ -29,7 +29,7 @@ snippets,vorlagen,lernen,verstehen,
 <link rel="stylesheet" href="assets/css/media-queries.css">
 
 </head>
-<body id=" ଘ(੭*ˊᵕˋ)੭* ̀ˋ hello ɪɴᴛᴇʀɴᴇᴛ ">
+<body id="ଘ(੭*ˊᵕˋ)੭*ˋhello_ɪɴᴛᴇʀɴᴇᴛ">
 <header>
 <div class="header-content">
 
