font-sizes, gaps, ...alot done

--- a/pages/template.htm
+++ b/pages/template.htm
@@ -6,36 +6,35 @@
 <meta name="description" content="Sammlung von Themen über Informatik, kompakt.">
 <meta name="keywords" content="linux,windows,cybersecurity,hacking,coding,shell,tools,network,basics">
 <meta name="author" content="Jumi">
-<!-- FAVICON --><link rel="icon" href="assets/img/ico/jumi.ico">
+<!-- FAVICON --><link rel="icon" href="../assets/img/ico/jumi.ico">
 <!-- TITLE --><title>jumi.biz</title>
 <!-- CSS -->
-<link rel="stylesheet" type="text/css" href="assets/css/basic.css">
-<link rel="stylesheet" type="text/css" href="assets/css/layout.css">
-<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<link rel="stylesheet" type="text/css" href="../assets/css/basic.css">
+<link rel="stylesheet" type="text/css" href="../assets/css/layout.css">
+<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
 <style>
-:root { /* Font and Colors */
-  --base-font-size: 16px;
-  --high-ground: rgba(0,0,0,0.1);
-  --laser-blue: #00f0f0;
-  --matrix-green: #8dd88e;
-  --neon-pink: #ffbfea;
-  --pipi-white: #ebebd3;
-  --shadow-grey: #131313;
-  --space-motion:
-      rgba(0, 240, 240, 0.4) 0px 2px 4px,
-      rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
-      rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
-  --ants-cry:
-      rgba(0, 0, 0, 0.1) 0px 2px 4px,
-      rgba(0, 0, 0, 0.4) 0px -2px 0px inset;
+:root { /* Farben */
+	--shadow-grey: #131313;
+	--pipi-white: #ebebd3;
+	--matrix-green: #8dd88e;
+	--laser-blue: #00f0f0;
+	--neon-pink: #ffbfea;
+	--high-ground: rgba(0,0,0,0.1);
+	--space-motion:
+        rgba(0, 240, 240, 0.4) 0px 2px 4px,
+        rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
+        rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
+    --ants-cry:
+        rgba(0, 0, 0, 0.1) 0px 2px 4px,
+        rgba(0, 0, 0, 0.4) 0px -2px 0px inset;
 }
 html {background-color: var(--shadow-grey);}
 body {
-  font-size: var(--base-font-size);
-  height: 100%;/* Footer-Einfluss */
-  margin:0;padding:0;
-  position: relative;/* Footer-Einfluss */
-  text-rendering: optimizeSpeed;
+    position: relative;/* Footer-Einfluss */
+    height: 100%;/* Footer-Einfluss */
+    min-width:100%;
+    margin:0;padding:0;
+    text-rendering: optimizeSpeed;
 }
 *,*::before,*::after {box-sizing: border-box;}
 </style>
@@ -44,7 +43,7 @@ body {
 <body id="ଘ(੭*ˊᵕˋ)੭*ˋhello_ɪɴᴛᴇʀɴᴇᴛ">
 <header><div class="header-content">
 <!-- LOGO -->
-<span id="jumi-logo"><img src="assets/img/ico/jumi.ico" alt="Jumi Logo"></span>
+<span id="jumi-logo"><img src="../assets/img/ico/jumi.ico" alt="Jumi Logo"></span>
 <a href="https://www.jumi.biz"><span id="jumi-biz">jumi.biz</span></a>
 <!-- BUTTON -->
 </div><nav class="navigation">
@@ -56,32 +55,33 @@ body {
 </button><div class="header-text"><span><!-- Textbanner --></span>
 <!-- MENU -->
 <ul data-state="closed" class="menu-list">
-<li><a href="Content.htm"><i class="list-icon">
-<img src="assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
-<li><a href="Links.htm"><i class="list-icon">
-<img src="assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
-<li><a href="Cheats.htm"><i class="list-icon">
-<img src="assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
-<li><a href="https://www.jumi.biz"><i class="list-icon">
-<img src="assets/img/ico/jumi.ico" alt="WTF is jumi?"></i>wtf is jumi?</a></li>
+<li><a href="../Content.htm"><i class="list-icon">
+<img src="../assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
+<li><a href="../Links.htm"><i class="list-icon">
+<img src="../assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
+<li><a href="../Cheats.htm"><i class="list-icon">
+<img src="../assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
+<li><a href="WTF_is_jumi.htm"><i class="list-icon">
+<img src="../assets/img/ico/jumi.ico" alt="WTF is jumi?"></i>wtf is jumi?</a></li>
 </ul></nav></div></header><main>
 <!-- MAIN -->
 <div class="grid-container">
 <article id="area-1" class="content flow">
 <!-- HELLO WORLD -->
 <hgroup><h1>print("hello world")</h1><p>WTF is <span class="jumi-font">jumi.biz</span> ?</p></hgroup>
-<section><p>Hier findest du <a href="https://www.jumi.biz/Content.htm">
-Themen</a> über Linux, Windows, Infosec, Coding, Shell, Tools und die&nbsp;Menschheit.</p></section>
+<section><p>Hier findest du Zusammenfassungen zu <a href="https://www.jumi.biz/Content.htm">
+Themen</a> über Linux Windows Cybersecurity Hacking Coding Shell Tools Network-Basics.</p></section>
 <!-- ABOUT -->
 <aside>
   <h4>Diese Website ist im Aufbau</h4>
-  <ul>
+  <ul style="font-size:small;">
   <li>[2019-06] Domain gemietet</li>
   <li>[2020/21] Konzeptentwicklung</li>
   <li>[2022-11] Ausarbeitung</li>
   <li>[2023-03] Designentwicklung</li>
   <li>[2023-08] Github-Anbindung</li>
   <li>[2023-10] Integration</li></ul></aside>
+<aside>
 <table id="tasten-steuerung">
 <caption>Tasten-Steuerung</caption>
     <thead>
@@ -106,10 +106,10 @@ Themen</a> über Linux, Windows, Infosec, Coding, Shell, Tools und die&nbsp;Mens
 <h2>&#36; whoami</h2>
 <div class="flex">
   <!-- PICTURE -->
-  <img id="modalTrigger01" src="assets/img/profile-img-1.png" alt="Picture shows Jumi">
+  <img id="modalTrigger01" src="../assets/img/profile-img-1.png" alt="Picture shows Jumi">
   <dialog id="openModal01">
     <figure>
-      <img src="assets/img/modal/profile-img-modal-01.png" alt="Image-Modal" id="imgModal01">
+      <img src="../assets/img/modal/profile-img-modal-01.png" alt="Image-Modal" id="imgModal01">
       <figcaption>
         <h2>Human Interface</h2>
       </figcaption>
@@ -117,10 +117,10 @@ Themen</a> über Linux, Windows, Infosec, Coding, Shell, Tools und die&nbsp;Mens
     <button id="closeModal01"> &times; </button>
   </dialog>
   <!-- PICTURE -->
-  <img id="modalTrigger02" src="assets/img/profile-img-2.png" alt="Picture shows shoe">
+  <img id="modalTrigger02" src="../assets/img/profile-img-2.png" alt="Picture shows shoe">
   <dialog id="openModal02">
     <figure>
-      <img src="assets/img/modal/profile-img-modal-02.png" alt="Image-Modal" id="imgModal02">
+      <img src="../assets/img/modal/profile-img-modal-02.png" alt="Image-Modal" id="imgModal02">
       <figcaption>
         <h2>Local Area</h2>
       </figcaption>
@@ -128,10 +128,10 @@ Themen</a> über Linux, Windows, Infosec, Coding, Shell, Tools und die&nbsp;Mens
     <button id="closeModal02"> &times; </button>
   </dialog>
   <!-- PICTURE -->
-  <img id="modalTrigger03" src="assets/img/profile-img-3.png" alt="Picture shows computer">
+  <img id="modalTrigger03" src="../assets/img/profile-img-3.png" alt="Picture shows computer">
   <dialog id="openModal03">
     <figure>
-      <img src="assets/img/modal/profile-img-modal-03.png" alt="Image-Modal" id="imgModal03">
+      <img src="../assets/img/modal/profile-img-modal-03.png" alt="Image-Modal" id="imgModal03">
       <figcaption>
         <h2>Central Processing</h2>
       </figcaption>
@@ -141,15 +141,15 @@ Themen</a> über Linux, Windows, Infosec, Coding, Shell, Tools und die&nbsp;Mens
 </div>
 <br>
 <!-- PERSON -->
-    <p>Mich interessieren Verborgenes über IT und die Menschenheit. Jede Art von Information wird von mir auf das Wesentliche minimalisiert und auf dieser Website zu eigenen Lernzwecken und für die Besucher bereitgestellt.</p>
+    <p>Mir macht es Spass, mich mit IT zu beschäftigen und Texte für Lernzwecke zu minimalisieren. Die Quellen meiner Textinhalte sind öffentliche Personen mit großer Reichweite oder private Weiterbildungen.</p>
     <q>Wer? Wer ist nur die Form als Konsequenz der Funktion des&nbsp;Was. Und&nbsp;was ich bin, das ist ein Mann mit Maske.</q><br><cite>- V wie Vendetta (2005)</cite>
 </article>
 <article id="area-3" class="content flow">
 <!-- STUFF -->
 <h4>Dark Mode Only</h4>
-    <p>Ein dunkler Bildschirm spart bis zu 60% Energie und schont die Augen.
+    <p>Ein dunkler Bildschirm spart bis zu 60% Energie und schont die&nbsp;Augen.
     Wenn&nbsp;du den hellen Modus immer noch bevorzugst dann&nbsp;GTFO!</p>
-    <q>Come with me. It&nbsp;is the only way.</q><br>
+    <q>Come with me. It is the only way.</q><br>
     <cite>- Star Wars: Episode V (1980)</cite>
 </article>
 <article id="area-4" class="content flow">
@@ -162,17 +162,17 @@ Themen</a> über Linux, Windows, Infosec, Coding, Shell, Tools und die&nbsp;Mens
     während&nbsp;die Informations-Technologie Daten verarbeitet und&nbsp;speichert.
     Das&nbsp;Beherrschen von Kung&nbsp;Fu erfordert&nbsp;Reaktionsfähigkeit,
     während&nbsp;bei der Verarbeitung von Informationen analytisches und logisches Denken entscheidend&nbsp;ist.
-    In&nbsp;der&nbsp;IT, wie im Kung&nbsp;Fu, liegt die Meisterschaft in der Hingabe und dem Streben nach&nbsp;Exzellenz.</blockquote>
-    <q>Der Meister erscheint wenn der Schüler bereit&nbsp;ist.</q><br>
+    In&nbsp;der IT, wie im Kung&nbsp;Fu, liegt die Meisterschaft in der Hingabe und dem Streben nach&nbsp;Exzellenz.</blockquote>
+    <q>Der Meister erscheint wenn der Schüler bereit ist.</q><br>
     <cite>- Karate Tiger (1986)</cite>
 </article>
 <article id="area-5" class="content flow">
 <h2>Quiz-Raum 3327</h2>
 <details class="flow">
-<summary>I have keys but no doors. I&nbsp;have space but no room. You&nbsp;can enter but can’t leave. What&nbsp;am&nbsp;I ?</summary>
+<summary>I have keys but no doors. I&nbsp;have space but no room. You&nbsp;can enter but can’t leave.<br>What am I ?</summary>
 <br><span class="quiz-answers">A keyboard</span>
 </details>
-<q>Die Wissenschaft ist bestrebt, die&nbsp;Welt um uns herum zu&nbsp;verstehen. Die&nbsp;Technologie hingegen strebt danach, sie zu&nbsp;beherrschen.</q><br>
+<q>Die Wissenschaft ist&nbsp;bestrebt, die&nbsp;Welt um uns herum zu&nbsp;verstehen. Die&nbsp;Technologie hingegen strebt danach, sie zu&nbsp;beherrschen.</q><br>
 <cite>- Nikola Tesla (1856-1943)</cite>
 </article></div></main>
 
@@ -185,27 +185,27 @@ Themen</a> über Linux, Windows, Infosec, Coding, Shell, Tools und die&nbsp;Mens
     <h3>Tags:</h3><ul id="tagList"></ul>
     <h3>Classes:</h3><ul id="classList"></ul>
     <h3>IDs:</h3><ul id="idList"></ul></div>
-    <script src="assets/js/html-analyzer.js"></script>-->
+    <script src="../assets/js/html-analyzer.js"></script>-->
 
 <footer><div class="footer-container">
 <div class="leftside-profil-icons">
 <!-- GITHUB -->
 <a id="github-link" href="https://www.github.com/xuser123" target="_blank">
-<img src="assets/img/ico/github.ico" alt="Github/xuser123"></a>
+<img src="../assets/img/ico/github.ico" alt="Github/xuser123"></a>
 <!-- INSTAGRAM -->
 <a id="instagram-link" href="https://www.instagram.com/jumicontent" target="_blank">
-<img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></div>
+<img src="../assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></div>
 <!-- EMAIL -->
 <span id="contact-email">contact&#64;jumi.biz</span>
 <div class="rightside-site-features">
 <!-- EXPORT PDF -->
 <a id="export-icon" href="#">
-<img src="assets/img/ico/export-pdf.ico" alt="Download as PDF"></a>
+<img src="../assets/img/ico/export-pdf.ico" alt="Download as PDF"></a>
 <!-- GO TOP -->
 <a id="goto-top" href="#">
-<img src="assets/img/ico/go-top.ico" alt="Zum Seitenanfang"></a></div></div></footer>
+<img src="../assets/img/ico/go-top.ico" alt="Zum Seitenanfang"></a></div></div></footer>
 <!-- SCRIPTS -->
-<script defer src="assets/js/menu.js"></script>
-<script defer src="assets/js/modal.js"></script>
+<script defer src="../assets/js/menu.js"></script>
+<script defer src="../assets/js/modal.js"></script>
 
 </body></html>
