--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ body {
         aria-expanded="false">
   <span class="hidden-menu">Menu</span>
   <div class="menu-icon" aria-hidden="true"></div>
-</button><div class="header-text"><span><!-- Textbanner --></span>
+</button><div class="header-text"><span id="banner">(&lt;&gt;..&lt;&gt;)</span>
 <!-- MENU -->
 <ul data-state="closed" class="menu-list">
 <li><a href="Content.htm"><i class="list-icon">
@@ -71,7 +71,7 @@ body {
 <!-- HELLO WORLD -->
 <hgroup><h1>print("hello world")</h1><p>WTF is <span class="jumi-font">jumi.biz</span> ?</p></hgroup>
 <section><p>Hier findest du <a href="https://www.jumi.biz/Content.htm">
-Themen</a> über Linux, Windows, Infosec, Coding, Shell, Tools und die&nbsp;Menschheit.</p></section>
+Themen</a> über Linux, Windows, Infosec, Coding, Shell, Tools und die&nbsp;Menschheit. Vermutlich&nbsp;50% gelesenes Wissen ist nach einem Tag vergessen und 70% nach 2 Tagen. Wenn man schriftliche Informationen auf das Wichtigste minimalisiert, bleiben 30% relevante Inhalte im Gedächtnis.</p></section>
 <!-- ABOUT -->
 <aside>
   <h4>Diese Website ist im Aufbau</h4>
@@ -141,7 +141,7 @@ Themen</a> über Linux, Windows, Infosec, Coding, Shell, Tools und die&nbsp;Mens
 </div>
 <br>
 <!-- PERSON -->
-    <p>Mich interessieren Verborgenes über IT und die Menschenheit. Jede Art von Information wird von mir auf das Wesentliche minimalisiert und auf dieser Website zu eigenen Lernzwecken und für die Besucher bereitgestellt.</p>
+    <p>Mich interessiert das&nbsp;Verborgene. Neugier&nbsp;ist wertvoll, wie das Wasser den Fischen, wie die Luft zum&nbsp;Atmen. Und am Ende sind wir selbst ein Geheimnis, das nur der Rauch des Feuers kennt. Die unfassbare Wahrheit erfasst uns, Erde im Wind.</p>
     <q>Wer? Wer ist nur die Form als Konsequenz der Funktion des&nbsp;Was. Und&nbsp;was ich bin, das ist ein Mann mit Maske.</q><br><cite>- V wie Vendetta (2005)</cite>
 </article>
 <article id="area-3" class="content flow">
@@ -149,25 +149,20 @@ Themen</a> über Linux, Windows, Infosec, Coding, Shell, Tools und die&nbsp;Mens
 <h4>Dark Mode Only</h4>
     <p>Ein dunkler Bildschirm spart bis zu 60% Energie und schont die Augen.
     Wenn&nbsp;du den hellen Modus immer noch bevorzugst dann&nbsp;GTFO!</p>
-    <q>Come with me. It&nbsp;is the only way.</q><br>
-    <cite>- Star Wars: Episode V (1980)</cite>
+    <q>Come with me. It&nbsp;is the&nbsp;only&nbsp;way.</q><br>
+    <cite>- Darth Vader (1980)</cite>
 </article>
 <article id="area-4" class="content flow">
 <!-- STUFF -->
 <h3>IT &#126; Kung Fu</h3>
-    <blockquote>Der chinesische Begriff "Kung&nbsp;Fu" bezieht sich auf Fähigkeiten und&nbsp;Techniken,
-    die&nbsp;durch lange, harte Übung und Geduld erlangt&nbsp;werden.
-    Es&nbsp;ist eine Disziplin, die zur Meisterung viel Engagement und Einsatz&nbsp;erfordert.
-    Kung&nbsp;Fu kombiniert Bewegungen und&nbsp;Strategien,
-    während&nbsp;die Informations-Technologie Daten verarbeitet und&nbsp;speichert.
-    Das&nbsp;Beherrschen von Kung&nbsp;Fu erfordert&nbsp;Reaktionsfähigkeit,
-    während&nbsp;bei der Verarbeitung von Informationen analytisches und logisches Denken entscheidend&nbsp;ist.
-    In&nbsp;der&nbsp;IT, wie im Kung&nbsp;Fu, liegt die Meisterschaft in der Hingabe und dem Streben nach&nbsp;Exzellenz.</blockquote>
+    <blockquote>Der chinesische Begriff "Kung&nbsp;Fu" bezieht sich auf Fähigkeiten und Techniken, die&nbsp;durch lange, harte&nbsp;Übung und Geduld erlangt&nbsp;werden.
+    Es&nbsp;ist eine Disziplin, die&nbsp;zur Meisterung viel Engagement und Einsatz&nbsp;erfordert.
+    Kung&nbsp;Fu kombiniert Bewegungen und&nbsp;Strategien, IT&nbsp;überträgt Signale und Daten, die&nbsp;durch konstruierte, physikalische&nbsp;Technik und Logik erzeugt&nbsp;werden. Das Beherrschen von Kung&nbsp;Fu erfordert Reaktionsfähigkeit, während&nbsp;bei der Verarbeitung von Informationen analytisches Denken entscheidend&nbsp;ist. In&nbsp;der&nbsp;IT, wie&nbsp;im Kung&nbsp;Fu, liegt&nbsp;der Schlüssel in der Hingabe und dem Streben nach&nbsp;Exzellenz.</blockquote>
     <q>Der Meister erscheint wenn der Schüler bereit&nbsp;ist.</q><br>
     <cite>- Karate Tiger (1986)</cite>
 </article>
 <article id="area-5" class="content flow">
-<h2>Quiz-Raum 3327</h2>
+<h2>Quiz-Frage 3327</h2>
 <details class="flow">
 <summary>I have keys but no doors. I&nbsp;have space but no room. You&nbsp;can enter but can’t leave. What&nbsp;am&nbsp;I ?</summary>
 <br><span class="quiz-answers">A keyboard</span>
