--- a/index.html
+++ b/index.html
@@ -70,18 +70,45 @@ body {
 <article id="area-1" class="content flow">
 <!-- HELLO WORLD -->
 <hgroup><h1>print("hello world")</h1><p>WTF is <span class="jumi-font">jumi.biz</span> ?</p></hgroup>
-<section><p>Hier findest du <a href="https://www.jumi.biz/Content.htm">
-Themen</a> über Linux, Windows, Infosec, Coding, Shell, Tools und die&nbsp;Menschheit. Vermutlich&nbsp;50% gelesenes Wissen ist nach einem Tag vergessen und 70% nach 2 Tagen. Wenn man schriftliche Informationen auf das Wichtigste minimalisiert, bleiben 30% relevante Inhalte im Gedächtnis.</p></section>
+<section><p>Kompakte Inhalte über
+<b class="r">Linux</b> 
+<b class="g">Windows</b> 
+<b class="b">Infosec</b> 
+<b class="y">Coding</b> 
+<b class="c">Shell</b> 
+<b class="m">Tools</b> und
+<b class="o">Exobiologie</b> 
+mit relative hohem&nbsp;Informationsgehalt.
+Normaler Text hat ca.&nbsp;25% relevanten Kerninhalt(x), 
+davon verbleibt nach einem Tag vermutlich&nbsp;50%, 
+nach&nbsp;zwei Tagen&nbsp;30% im Gedächtnis.<br>
+Das ergibt&nbsp;7,5%&nbsp;Nutztext (0,25x*0,3=0,075x).<br><br>
+Mein Text ist minimalisiert, fragmentiert und visuell&nbsp;ergonomisiert.<br>
+<b>Normaler-Text(A):</b><br><q>Zwanzig Zwerge machen Handstand,
+zehn im Wandschrank, zehn am Sandstrand.</q><br>
+<b>Kompakter-Text(B):</b><br><q>Zwergenhandstände: Schrank=10, Strand=10</q><br>
+<b class="p">Ergebnis(A):</b><br>13 Worte aus 10 Zeichenfolgen,<br> davon 6 relevant (=60%)<br>
+<b class="p">Ergebnis(B):</b><br>7 Worte aus 5 Zeichenfolgen,<br> davon 5 relevant (=100%)
+
+</p></section>
 <!-- ABOUT -->
-<aside>
-  <h4>Diese Website ist im Aufbau</h4>
-  <ul>
-  <li>[2019-06] Domain gemietet</li>
-  <li>[2020/21] Konzeptentwicklung</li>
-  <li>[2022-11] Ausarbeitung</li>
-  <li>[2023-03] Designentwicklung</li>
-  <li>[2023-08] Github-Anbindung</li>
-  <li>[2023-10] Integration</li></ul></aside>
+<section class="flex">
+<aside><h4>$ history</h4><ul>
+    <li>[2019-06] Domain gemietet</li>
+    <li>[2020/21] Konzeptentwicklung</li>
+    <li>[2022-11] Ausarbeitung</li>
+    <li>[2023-03] Designentwicklung</li>
+    <li>[2023-08] Github-Anbindung</li>
+    <li>[2023-10] Integration</li></ul></aside>
+<aside><h4>Milestones To-Do:</h4><ul>
+    <li>[2023-11] Edits/Content</li>
+    <li>[2023-11] Instagram Content</li>
+    <li>[2023-12] JavaScript AddOns</li>
+    <li>[2024-01] PHP-Implementierung</li>
+    <li>[2024-01] Quiz-Feature(ChatGPT)</li>
+    <li>[2024-01] Themes-Feature</li></ul></aside>
+</section>
+<section class="flex">
 <table id="tasten-steuerung">
 <caption>Tasten-Steuerung</caption>
     <thead>
@@ -100,7 +127,7 @@ Themen</a> über Linux, Windows, Infosec, Coding, Shell, Tools und die&nbsp;Mens
         <td><span>Enter</span></td>
         </tr>
     </tbody>
-</table></aside>
+</table></section>
 </article>
 <article id="area-2" class="content flow">
 <h2>&#36; whoami</h2>
@@ -147,7 +174,7 @@ Themen</a> über Linux, Windows, Infosec, Coding, Shell, Tools und die&nbsp;Mens
 <article id="area-3" class="content flow">
 <!-- STUFF -->
 <h4>Dark Mode Only</h4>
-    <p>Ein dunkler Bildschirm spart bis zu 60% Energie und schont die Augen.
+    <p>Ein dunkler Bildschirm spart bis zu 60% Energie und schont die&nbsp;Augen.
     Wenn&nbsp;du den hellen Modus immer noch bevorzugst dann&nbsp;GTFO!</p>
     <q>Come with me. It&nbsp;is the&nbsp;only&nbsp;way.</q><br>
     <cite>- Darth Vader (1980)</cite>
